# rpc

./: justfile
iac/kibana/: kibana.iac.json  main.py  pyproject.toml
iac/kibana/src/: config.py
iac/kibana/src/api/: __init__.py  dataviews.py  http.py
